--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,188 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
   margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+
+body {
+  background-color: #000000;
+}
+
+.top
+{
+  padding: 10px 20px;
+  background-color: #222;
+  color: #fff;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.mail {
+  padding-top: 10px;
+  margin-right: 50px;
+  color: #ccc
+}
+
+.tester {
+  width: 80%;
+  margin-left: 10%;
+  margin-top: 80px;
+}
+
+.score {
+  display: inline-flex;
+  background-color: gray;
+  border-radius: 10px;
+  padding: 10px;
+}
+.score-text {
+  font-weight: bold;
+
+}
+.cps {
+  margin-left: 10px;
+}
+
+.time {
+  display: inline-flex;
+  background-color: gray;
+  border-radius: 10px;
+  padding: 10px;
+}
+.chrono {
+  font-weight: bold;
+
+}
+.time-value {
+  margin-left: 10px;
+}
+
+.button-container {
+  margin-top: 30px;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.circle {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: #333;
+
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  cursor: grab;
+}
+
+.circle:active {
+  background-color: #222;
+}
+
+.score-value {
+  font-weight: bold;
+  font-size: xxx-large;
+  font-family: 'Courier New', Courier, monospace;
+  color: #fff;
+
+  pointer-events: none;
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+}
+
+
+
+
+
+
+.leaderboard {
+  color: #fff;
+
+
+  width: 80%;
+  margin-top: 100px;
+  margin-left: 10%;
+
+  padding: 30px;
+  background-color: #222;
+  border-radius: 20px;
+}
+
+.lead {
+  margin-top: -10px;
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.players {
+  list-style: none;
+}
+
+.players li {
+  list-style: none;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+}
+
+input
+{
+  width: 120px;
+  height: 28px;
+  padding: 5px;
+  font-size: 20px;
+  background-color: #222;
+  color: white;
+  border-radius: 4px;
+  margin-left: 10%;
+  margin-top: 30px;
+}
+
+.login {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: #222;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  z-index: 100;
+
+
+}
+#username {
+  width: 200px;
+  height: 30px;
+  margin: 0 auto 10px;
+}
+.confirm {
+  width: 100px;
+  height: 30px;
+  margin: 0 auto;
 }
