--- a/client/src/index.css
+++ b/client/src/index.css
@@ -161,7 +161,7 @@ input
   margin-top: 30px;
 }
 
-.login {
+.login, .server {
   position: absolute;
   top: 0;
   left: 0;
@@ -175,7 +175,7 @@ input
   justify-content: center;
   align-items: center;
 
-  z-index: 100;
+  z-index: 5;
 
 
 }
