--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,12 +2,20 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
   margin: auto;
+
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
 }
 
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
+
+
 }
 
 body {
@@ -104,6 +112,7 @@ body {
   color: #fff;
 
   pointer-events: none;
+
   user-select: none;
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -115,7 +124,7 @@ body {
 .container {
   display: flex;
   justify-content: center;
-    align-items: center;
+  align-items: center;
 }
 
 .leaderboard {
