--- a/leaderboard/css/main.css
+++ b/leaderboard/css/main.css
@@ -1,1 +1,139 @@
-/* C'est du beau */
+/* Styles pour le conteneur principal */
+#container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+/* Styles pour le titre */
+h1 {
+    text-align: center;
+}
+
+/* Styles pour le podium */
+#podium {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.podium-users {
+    display: inline-block;
+    width: 30%;
+    padding: 20px;
+    margin: 10px;
+    background-color: #f1f1f1;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+}
+
+.podium-users:hover {
+    transform: scale(1.05);
+}
+
+.podium-users:first-child {
+    background-color: gold;
+}
+
+.podium-users:nth-child(2) {
+    background-color: silver;
+}
+
+.podium-users:nth-child(3) {
+    background-color: #cd7f32;
+}
+
+.podium-users .podium-img {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 30px;
+    height: 30px;
+}
+
+/* Styles pour le tableau de classement */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th {
+    padding: 10px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+
+th:first-child {
+    width: 20%;
+}
+
+th:nth-child(2) {
+    width: 30%;
+}
+
+th:nth-child(3) {
+    width: 20%;
+}
+
+th:nth-child(4) {
+    width: 30%;
+}
+
+td {
+    padding: 10px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+
+tbody {
+    width: 100%;
+}
+
+/* Styles pour les éléments utilisateur */
+.user {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    margin-bottom: 10px;
+
+    width: 100%;
+}
+
+tbody div {
+    width: 500px;
+}
+
+
+.rank {
+    width: 20%;
+    font-weight: bold;
+}
+
+.username {
+    width: 30%;
+    margin-left: 10px;
+}
+
+.cps {
+    width: 20%;
+    margin-left: 20px;
+}
+
+.date {
+    width: 30%;
+    font-size: 12px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
+}
